# bitget-wallet-cli

./: CHANGELOG.md  README.md  pyproject.toml
bgw/: __init__.py  api.py  cli.py  format.py
