[project]
name = "bitget-wallet-cli"
version = "2026.4.13-1"
description = "Bitget Wallet CLI — on-chain data, token analysis, smart money, RWA stocks, swaps, token transfers, and balance queries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
bgw = "bgw.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bgw*"]
